--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pInjCQaSy+KGPGvdz/fJLldcLYTTESYIiblWiAFyOiE/IXd4PGjaD5P5tTDNswmqiMTYsY8p9lNVIxC7wSkIIFl/hq/rN+P8xCkzbpNv1gTNnoywU387FU8Q89N0GvT6">
+                <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n7oKPwe8WgTqMQTRQ0WPpFEayTmy53gr76EfGr78qAyTBNLBGw9ts/cOCzz68ygGovGATciCvN2kzOlqi10gQfz8ocOyfUeO8xlBflDRXEb4RdtGWoM1tyNiaokkIok3">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-5">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">SUBSCRIBE</button></span>
@@ -159,7 +159,7 @@
         <div class="container mt-5 pt-5 pb-5">
            <div class="media-container-column" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0PHW6KPvFdwWs2/9T8tAKaGkbG5F4HcSddbfolb3NBZoU66R+2qZqXMxJSh3UFEVQ9VjeXwmyaAdCgkwbHBtz9HHgCNknDSTXe+HrlSKNbu1Xu+z9CGwfKnsE+xwuuHZ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YNfb2kEWFevGfQecywvAuZ43buORsafvXjcWwh9aDIJIMZ2jC89kZpcTjnW6qTmny79cqKEeWTU14M3ddtqrQEWPZiW0hxIq+ytznaUNbD+ata8b6/xWyAg39NoXKrXw">
                     <div class="row justify-content-center form-inline">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -221,7 +221,7 @@
 
 </section>
 
-<section class="witsec-mailform mbr-section cid-tzqHxIk1Hd" id="witsec-mailform-e" data-rv-view="81">
+<section class="witsec-mailform mbr-section cid-tzqHxIk1Hd" id="witsec-mailform-e" data-rv-view="110">
 
   
 
@@ -498,7 +498,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7bkl7IQZAHkGQF3v40aAVFoI1g10U+o88l/BOPhorxWRQD1lkcnnGqN+Lf8wfDSvvC6IeN0BAHK+7J8aGquqwMVT0nJA88DNfJCow6deC9NVrp8tp4YzIjqhkhuk05rj">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RUmxHUf0ZFyURFrMasAIaO+Qk/7WK+pPHvd902yTngb9j/AFtwtzRqsxoumh5OMlBhzXERODuuJuXeuFT9a81UmxPM8U/bmBQR6aLADg+DA08bCTQezjb5XYlxGmFEVN">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -566,7 +566,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2939872" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-builder.html">Landing Page Builder</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/countdown/jquery.countdown.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/witsec-mailform/mailform.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2939872" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/countdown/jquery.countdown.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/witsec-mailform/mailform.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
